# draggable-svg

./: setup.cfg
draggable_svg/: __init__.py  board.py
website/: brequirements.txt  draggable_svg.html  solitaire.html  solitaire.py
