[metadata]
# Derived from https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
name = draggable_svg
version = attr: draggable_svg.__version__
description = This tool makes objects within a svg tag draggable.
author = Ray Luo
author_email = rayluo.mba@gmail.com
url = https://github.com/rayluo/draggable-svg
project_urls =
    Changelog = https://github.com/rayluo/draggable-svg/releases
keywords = svg, draggable, brython
license = MIT
classifiers =
    Programming Language :: Python :: Implementation :: Brython
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

# NOTE: Settings of this section below this line should not need to be changed

long_description = file: README.md

[options]
install_requires =
    # requests>=2.0.0,<3
    # importlib; python_version == "2.6"
    # See also https://setuptools.readthedocs.io/en/latest/userguide/quickstart.html#dependency-management

# NOTE: Settings of this section below this line should not need to be changed
packages = find:
include_package_data = True

[options.extras_require]
# Examples:
# secure = crytography
# pdf = ReportLab>=1.2; RXP
# rest = docutils>=0.3; pack ==1.1, ==1.3

[options.entry_points]
# See also https://setuptools.readthedocs.io/en/latest/userguide/entry_point.html
console_scripts =
    # executable_name = [package.subpackage.]module[:object.object]
gui_scripts =

[options.packages.find]
# Derived from https://setuptools.readthedocs.io/en/latest/userguide/package_discovery.html
exclude = tests

[options.package_data]
* = LICENSE,

[bdist_wheel]
universal=1

